# nap-script

./: CMakeLists.txt  Makefile  bsd_enve.h  bsd_extr.h  bsd_indx.h  bsd_numb.h  bt_string.cpp  bt_string.h  call_ctx.cpp  call_ctx.h  code_output.cpp  code_output.h  code_stream.cpp  code_stream.h  com_strings.h  common_structs.h  comparison.cpp  comparison.h  compiler.cpp  consts.cpp  consts.h  envelope.cpp  envelope.h  evaluate.cpp  evaluate.h  expression_tree.h  hash.cpp  hash.h  indexed.cpp  indexed.h  interpreter.cpp  interpreter.h  is.cpp  is.h  listv.h  method.cpp  method.h  nap.files  nap.includes  nap.pro  (+32 more)
compiler/: CMakeLists.txt  bt_string.cpp  bt_string.h  call_ctx.cpp  call_ctx.h  charconverter.cpp  charconverter.h  code_finalizer.cpp  code_finalizer.h  code_output.cpp  code_output.h  code_stream.cpp  code_stream.h  common_structs.h  compiler.cpp  compiler.h  consts.cpp  consts.h  envelope.h  evaluate.cpp  evaluate.h  expression_tree.h  expression_with_location.cpp  file_abstraction.cpp  file_abstraction.h  garbage_bin.cpp  garbage_bin.h  hash.cpp  hash.h  interpreter.cpp  interpreter.h  main.cpp  method.cpp  method.h  notimpl.h  number.h  opr_hndl.cpp  opr_hndl.h  parameter.cpp  parameter.h  (+17 more)
doc/: NapVM.docx  doc.ad  doc.html  doc.md
ext_gen/: CMakeLists.txt  nap_ext_gen.cpp
iconv/: CMakeLists.txt  cp1255.h  cp1258.h  iconv.h  relocatable.c  tcvn.h
inc/: Doxyfile  nap_consts.h  nap_runtime.h  nap_structs.h  nap_types.h  opcodes.h
nbci/: call.c  call.h  clidx.c  clrs.c  clrs.h  comparison.c  comparison.h  dec.c  inc.c  jmptable.c  jmptable.h  jump.c  jump.h  marks.c  metatbl.c  metatbl.h  mov.c  nbci.c  nbci.h  nbci_impl.c  operation.c  operation.h  peek.c  pop.c  push.c  push.h  return.c  return.h  stack.c  stack.h  strtable.c  strtable.h
runtime/: CMakeLists.txt  nap_runtime.cpp  nap_runtime.h
tests/: CMakeLists.txt  catch.h  code_exec.cpp  generated.cpp  test.c  test.cpp  tests.h  var_def.cpp
tests/script/: post_pre.nap  test_bool.nap  test_default_return_values.nap  test_for_break.nap  test_function_one_parameter.nap  test_internal_variable.nap  test_parameter_of_function.nap  test_var_def.nap
vm/: CMakeLists.txt  byte_order.c  byte_order.h  call.c  call.h  call_intern.c  call_intern.h  classes.c  classes.h  clidx.c  clidx.h  clrs.c  clrs.h  comparison.c  comparison.h  crea.c  crea.h  dec.c  dec.h  funtable.c  funtable.h  inc.c  inc.h  jmptable.c  jmptable.h  jump.c  jump.h  leave.c  leave.h  main.c  marks.c  marks.h  metatbl.c  metatbl.h  mov.c  mov.h  nbci.c  nbci.h  nbci_impl.c  nbci_impl.h  (+24 more)
vm/interrupts/: CMakeLists.txt
vm/interrupts/intr_1/: CMakeLists.txt  intr_1.c  intr_1.h
vm/interrupts/intr_2/: CMakeLists.txt  intr_2.cpp  intr_2.h
vm/interrupts/intr_3/: CMakeLists.txt  intr_3.c  intr_3.h
vm/interrupts/intr_4/: CMakeLists.txt  intr_4.c  intr_4.h
